unpackaged/main/default/objects/Feasibility__c/Feasibility__c.object-meta.xml
<CustomObject>
    <label>Feasibility Check</label>
    <nameField>
        <label>Feasibility  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feasibility Check</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>