unpackaged/main/default/objects/Feasibility__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feasibility Check</relationshipLabel>
    <relationshipName>Feasibility_Check</relationshipName>
    <type>Lookup</type>
</CustomField>