unpackaged/main/default/objects/Feasibility__c/fields/Comment_Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Comment_Feasibility__c</fullName>
    <label>Comment Compliance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>