unpackaged/main/default/objects/Feasibility__c/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <formula>IF(OR(CONTAINS(CreatedBy.UserRole.Name,&quot;Touch&quot;), CONTAINS(CreatedBy.UserRole.Name,&quot;Customer Experience&quot;), CONTAINS(CreatedBy.UserRole.Name,&quot;CX&quot;)), &quot;Customer Experience&quot;,&quot;&quot;)
+
IF(CONTAINS(CreatedBy.UserRole.Name,&quot;Risk&quot;), &quot;Risk&quot;,&quot;&quot;)
+
IF(OR(CONTAINS(CreatedBy.UserRole.Name,&quot;Sales&quot;),CONTAINS(CreatedBy.UserRole.Name,&quot;Partner&quot;),CONTAINS(CreatedBy.UserRole.Name,&quot;Lead Management&quot;)),&quot;Sales&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Role</label>
    <type>Text</type>
</CustomField>