unpackaged/main/default/objects/Feasibility__c/fields/Feasibility_Check_for__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Check_for__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feasibility Check for:</label>
    <referenceTo>shop__c</referenceTo>
    <relationshipLabel>Feasibility Check</relationshipLabel>
    <relationshipName>Feasibility_Check</relationshipName>
    <type>Lookup</type>
</CustomField>