unpackaged/main/default/objects/Feasibility__c/fields/Public_Comment__c.field-meta.xml
<CustomField>
    <fullName>Public_Comment__c</fullName>
    <label>Public Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>