unpackaged/main/default/objects/Feasibility__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Not ok</fullName>
            </value>
            <value>
                <fullName>Depends on:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>