unpackaged/main/default/objects/Feasibility__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feasibility check in progress</fullName>
            </value>
            <value>
                <fullName>Feasibility check completed</fullName>
            </value>
            <value>
                <fullName>Feasibility check requested</fullName>
            </value>
            <value>
                <fullName>Feasibility renewed requested</fullName>
            </value>
            <value>
                <fullName>Feasibility check not necessary</fullName>
                <isActive>false</isActive>
                <label>Feasibility check not necessary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>