unpackaged/main/default/objects/Feasibility__c/validationRules/Prev_Dependson_without_checkinprogress.validationRule-meta.xml
<ValidationRule>
    <fullName>Prev_Dependson_without_checkinprogress</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(($User.Alias = &#39;trust&#39;), 
NOT(ISPICKVAL( Status__c , &quot;Feasibility check in progress&quot;)),
ISPICKVAL( Result__c , &quot;Depends on:&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please fill out the Status with &quot;Feasibility check in progress&quot;</errorMessage>
</ValidationRule>