unpackaged/main/default/objects/Feasibility__c/validationRules/Prevent_ok_without_check_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_ok_without_check_completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(NOT(ISPICKVAL( Status__c , &quot;Feasibility check completed&quot;)),
ISPICKVAL( Result__c , &quot;Ok&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please fill out the Status with &quot;Feasibility check completed&quot;</errorMessage>
</ValidationRule>