unpackaged/main/default/objects/Feasibility__c/listViews/Completed_Feasibility_Checks1.listView-meta.xml
<ListView>
    <fullName>Completed_Feasibility_Checks1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Feasibility_Check_for__c</columns>
    <columns>High_priority__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>Public_Comment__c</columns>
    <columns>Comment_Feasibility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Feasibility check completed</value>
    </filters>
    <label>Completed Feasibility Checks</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Team_Compliance</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>