unpackaged/main/default/objects/Feasibility__c/listViews/Depends_on_Feasibility_Checks.listView-meta.xml
<ListView>
    <fullName>Depends_on_Feasibility_Checks</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Feasibility_Check_for__c</columns>
    <columns>High_priority__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>Public_Comment__c</columns>
    <columns>Comment_Feasibility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Feasibility check completed</value>
    </filters>
    <filters>
        <field>Result__c</field>
        <operation>equals</operation>
        <value>Depends on:</value>
    </filters>
    <label>Depends on Feasibility Checks</label>
    <sharedTo>
        <role>Team_Compliance</role>
    </sharedTo>
</ListView>